--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                         </span>
                     <h4>Dashboard</h4>
                 </a>
-                <a href="#">
+                <a href="https://cointex-cm.github.io/cointe/">
                     <span class="material-symbols-sharp">
                         account_balance_wallet
                         </span>
@@ -77,13 +77,13 @@
                         </span>
                     <h4>Task</h4>
                 </a>
-                <a href="#">
+                <a href="https://cointex-cm.github.io/cointe">
                       <span class="material-symbols-sharp">
                         download
                         </span>
                        <h4>Deposit</h4>
                 </a>
-                <a href="#">
+                <a href="https://cointex-cm.github.io/cointe/?status=ready">
 	    <span class="material-symbols-sharp">
                         exit_to_app
                         </span>
