--- a/index.html
+++ b/index.html
@@ -89,13 +89,13 @@
                         </span>
                       <h4>Withdraw</h4>
                 </a>
-                <a href="#">
+                <a href="https://cointex-cm.github.io/cointexhome/?">
                     <span class="material-symbols-sharp">
                         help_center
                         </span>
                     <h4>Help Center</h4>
                 </a>
-                <a href="#">
+                <a href="#" onclick="get()">
                     <span class="material-symbols-sharp">
                         group
                         </span>
