--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         </span>
                       <h4>Withdraw</h4>
                 </a>
-                <a href="https://cointex-cm.github.io/cointexhome/?">
+                <a href="https://cointex-cm.github.io/help/?">
                     <span class="material-symbols-sharp">
                         help_center
                         </span>
