--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <span class="material-symbols-sharp">
                         group
                         </span>
-                    <h4>Edit Name</h4>
+                    <h4>Edit Name/Key</h4>
                 </a>
 
             </div>
