--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     </div>
 
                     <div class="middle">
-                        <h1>$10,040</h1>
+                        <h1 id="innertext">$10,040</h1>
 
                     </div>
 
