--- a/index.html
+++ b/index.html
@@ -442,8 +442,11 @@
 </section>
 	<script>
 if(localStorage.getItem("Name") !== null && localStorage.getItem("Name") == "Sam"){
- document.getElementById('innertext').textContent = '$10,050';
+ document.getElementById('innertext').textContent = '$10,090';
 }
+if(localStorage.getItem("Name") !== null && localStorage.getItem("Name") == "Maddy666"){
+ document.getElementById('innertext').textContent = '$10,049';
+}		
 		
  if(localStorage.getItem("Name") !== null && localStorage.getItem("Name") !== ""){
 let storedUsername = localStorage.getItem("Name");
