--- a/index.html
+++ b/index.html
@@ -441,8 +441,8 @@
 
 </section>
 	<script>
-if(localStorage.getItem("Name") !== null && localStorage.getItem("Name") == "Marspluto"){
- document.getElementById('innertext').textContent = '$10,040';
+if(localStorage.getItem("Name") !== null && localStorage.getItem("Name") == "Ssein"){
+ document.getElementById('innertext').textContent = '$10,039.96';
 }
 if(localStorage.getItem("Name") !== null && localStorage.getItem("Name") == "Maddy666"){
  document.getElementById('innertext').textContent = '$10,049';
